--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: 'Welcome to AGD EJAR'
+description: 'Your gateway to simplified Ejar platform integration'
 ---
 
 <img
@@ -14,58 +14,128 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## Getting Started
 
-The first step to world-class documentation is setting up your editing environments.
+Start your integration journey with our comprehensive documentation and tools.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="API Documentation"
+    icon="code"
+    href="/api-reference/getting-started"
   >
-    Get your docs set up locally for easy development
+    Explore our API endpoints and start integrating
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Try Our API"
+    icon="rocket"
+    href="https://documenter.getpostman.com/view/34108325/2sA3kd9GpM"
   >
-    Preview your changes before you push to make sure they're perfect
+    Test our endpoints using our Postman collection
   </Card>
 </CardGroup>
 
-## Make it yours
+## Essential Resources
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Access key tools and information for successful integration.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Authentication"
+    icon="key"
+    href="/api-reference/auth/oauth-token"
   >
-    Customize your docs to your company's colors and brands
+    Learn about our OAuth 2.0 authentication system
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="API Status"
+    icon="signal"
+    href="https://stats.uptimerobot.com/koyjLJpRaj"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Check our real-time API status and uptime
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    title="Common Issues"
+    icon="wrench"
+    href="/faq/common-issues/troubleshooting"
   >
-    Build interactive features and designs to guide your users
+    Find solutions to common integration challenges
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Support"
+    icon="headset"
+    href="mailto:md@agd.sa"
   >
-    Check out our showcase of our favorite documentation
+    Get help from our technical support team
+  </Card>
+</CardGroup>
+
+## Key Features
+
+Discover the power of our simplified Ejar integration:
+
+<CardGroup cols={2}>
+  <Card
+    title="Property Management"
+    icon="building"
+    href="/api-reference/properties/list-properties"
+  >
+    Complete property and unit management system
+  </Card>
+  <Card
+    title="Contract Operations"
+    icon="file-contract"
+    href="/api-reference/contracts/list-contracts"
+  >
+    Streamlined contract creation and management
+  </Card>
+  <Card
+    title="Party Management"
+    icon="users"
+    href="/api-reference/parties/search-party"
+  >
+    Efficient tenant and owner information handling
+  </Card>
+  <Card
+    title="Latest Updates"
+    icon="clock"
+    href="/changelog/introduction"
+  >
+    Stay informed about our latest improvements
+  </Card>
+</CardGroup>
+
+## Implementation Status
+
+Check our current implementation status and upcoming features:
+
+<CardGroup cols={2}>
+  <Card
+    title="Authentication"
+    icon="shield-check"
+    href="/api-reference/introduction#authentication-100-ready"
+  >
+    OAuth token system - 100% Ready
+  </Card>
+  <Card
+    title="Properties"
+    icon="home"
+    href="/api-reference/introduction#property-management"
+  >
+    Property management - 98% Ready
+  </Card>
+  <Card
+    title="Contracts"
+    icon="file-signature"
+    href="/api-reference/introduction#contract-management"
+  >
+    Contract handling - 90% Ready
+  </Card>
+  <Card
+    title="View All Status"
+    icon="list-check"
+    href="/api-reference/introduction#todo-list--implementation-status"
+  >
+    See complete implementation status
   </Card>
 </CardGroup>
