--- a/faq/introduction.mdx
+++ b/faq/introduction.mdx
@@ -1,33 +1,63 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'About Agd Ejar'
+description: 'Frequently Asked Questions about AGD Ejar API'
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+## General Questions
 
-## Welcome
+### What is AGD Ejar API?
+AGD Ejar API is a simplified interface for integrating with Saudi Arabia's Ejar platform. It consolidates complex Ejar operations into simple, efficient API calls.
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+### How do I get started?
+1. Contact our support team at [md@agd.sa](mailto:md@agd.sa) to obtain API credentials
+2. Review our [Getting Started guide](/api-reference/getting-started)
+3. Try our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM)
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+### What authentication method is used?
+We use OAuth 2.0 with Bearer tokens. See our [Authentication guide](/api-reference/auth/oauth-token) for details.
 
-## Authentication
+## Technical Questions
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+### What is the API base URL?
+The base URL for all API requests is `https://app.agdejar.sa`
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
+### Are there any rate limits?
+Rate limits vary based on your specific use case. Please contact support for details about your account's limits.
+
+### What response formats are supported?
+All API responses are returned in JSON format.
+
+## Integration Questions
+
+### How do I handle errors?
+Our API uses standard HTTP response codes:
+- 200: Success
+- 400: Bad Request
+- 401: Unauthorized
+- 403: Forbidden
+- 404: Not Found
+- 500: Server Error
+
+### How can I check the API status?
+You can check our [Status Page](https://stats.uptimerobot.com/koyjLJpRaj) for real-time API status and updates.
+
+### What programming languages are supported?
+Our API can be used with any programming language that can make HTTP requests. We provide examples in:
+- cURL
+- Python
+- JavaScript
+- Go
+
+## Support
+
+### How do I get help?
+- Email: [md@agd.sa](mailto:md@agd.sa)
+- Documentation: [API Reference](/api-reference/introduction)
+- Status: [Status Page](https://stats.uptimerobot.com/koyjLJpRaj)
+
+### How do I report issues?
+Contact our support team at [md@agd.sa](mailto:md@agd.sa) with:
+1. Detailed description of the issue
+2. API endpoint being used
+3. Request/response examples
+4. Any error messages received 
