--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,86 +1,171 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Quick Start Guide'
+description: 'Get started with AGD Ejar API integration in minutes'
 ---
 
-## Setup your development
+## Before You Begin
 
-Learn how to update your docs locally and deploy them to the public.
+<Note>
+  To start using AGD Ejar API, you'll need to request an account. Contact us at [md@agd.sa](mailto:md@agd.sa) with:
+  - Your organization name
+  - Business contact information
+  - Intended use case
+  - Expected API call volume
+  
+  Our team will create your account and provide your API credentials within 1-2 business days.
+</Note>
 
-### Edit and preview
+## Integration Steps
+
+Follow these steps to quickly integrate with AGD Ejar API.
+
+### 1. Get Your Credentials
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="key" title="Obtain API Credentials">
+    1. Contact our support team at [md@agd.sa](mailto:md@agd.sa)
+    2. Provide your organization details
+    3. Receive your `client_id` and `client_secret`
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+  <Accordion icon="shield-check" title="Test Authentication">
+    Once you have your credentials, test the authentication:
+    ```bash
+    curl --request POST \
+      --url 'https://app.agdejar.sa/oauth/token' \
+      --header 'Content-Type: multipart/form-data' \
+      --form 'grant_type=client_credentials' \
+      --form 'client_id=your_client_id' \
+      --form 'client_secret=your_client_secret' \
+      --form 'scope=read'
+    ```
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+### 2. Explore the API
 
 <AccordionGroup>
+  <Accordion icon="rocket" title="Try Postman Collection">
+    1. Access our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM)
+    2. Import the collection into your Postman
+    3. Set up your environment variables
+    4. Test different endpoints
+  </Accordion>
+  <Accordion icon="code" title="Review Examples">
+    Check our code examples in multiple languages:
+    <CodeGroup>
+      ```bash Curl
+      # List Properties Example
+      curl --request GET \
+        --url 'https://app.agdejar.sa/tenant/v1/properties' \
+        --header 'Accept: application/json' \
+        --header 'Authorization: Bearer YOUR_ACCESS_TOKEN'
+      ```
+      ```python Python
+      import requests
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+      headers = {
+          "Accept": "application/json",
+          "Authorization": "Bearer YOUR_ACCESS_TOKEN"
+      }
 
+      response = requests.get(
+          "https://app.agdejar.sa/tenant/v1/properties",
+          headers=headers
+      )
+      ```
+      ```javascript JavaScript
+      const response = await fetch('https://app.agdejar.sa/tenant/v1/properties', {
+        method: 'GET',
+        headers: {
+          'Accept': 'application/json',
+          'Authorization': 'Bearer YOUR_ACCESS_TOKEN'
+        }
+      });
+      ```
+    </CodeGroup>
+  </Accordion>
 </AccordionGroup>
 
-## Update your docs
+## Essential Integrations
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+Start with these core features to get your integration running.
 
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
+<CardGroup cols={2}>
+  <Card
+    title="Property Management"
+    icon="building"
+    href="/api-reference/properties/list-properties"
+  >
+    Learn how to manage properties and units
+  </Card>
+  <Card
+    title="Contract Operations"
+    icon="file-contract"
+    href="/api-reference/contracts/create-contract"
+  >
+    Start creating and managing contracts
+  </Card>
+  <Card
+    title="Party Management"
+    icon="users"
+    href="/api-reference/parties/search-party"
+  >
+    Handle tenant and owner information
+  </Card>
+  <Card
+    title="Authentication"
+    icon="key"
+    href="/api-reference/auth/oauth-token"
+  >
+    Set up secure API authentication
+  </Card>
 </CardGroup>
+
+## Best Practices
+
+Follow these guidelines for successful integration:
+
+<CardGroup cols={2}>
+  <Card
+    title="Error Handling"
+    icon="shield-exclamation"
+    href="/faq/common-issues/troubleshooting"
+  >
+    Implement proper error handling and retries
+  </Card>
+  <Card
+    title="Rate Limiting"
+    icon="gauge-high"
+    href="/api-reference/introduction#rate-limiting"
+  >
+    Understand and respect API rate limits
+  </Card>
+  <Card
+    title="Status Monitoring"
+    icon="signal"
+    href="https://stats.uptimerobot.com/koyjLJpRaj"
+  >
+    Monitor API status and uptime
+  </Card>
+  <Card
+    title="Support"
+    icon="headset"
+    href="mailto:md@agd.sa"
+  >
+    Get help when you need it
+  </Card>
+</CardGroup>
+
+## Next Steps
+
+<AccordionGroup>
+  <Accordion icon="book" title="Read the Documentation">
+    Review our detailed [API Reference](/api-reference/introduction) for comprehensive endpoint documentation.
+  </Accordion>
+  <Accordion icon="wrench" title="Handle Common Issues">
+    Check our [FAQ](/faq/introduction) and [Troubleshooting Guide](/faq/common-issues/troubleshooting) for solutions to common problems.
+  </Accordion>
+  <Accordion icon="signal" title="Monitor Status">
+    Keep an eye on our [Status Page](https://stats.uptimerobot.com/koyjLJpRaj) for real-time API status updates.
+  </Accordion>
+</AccordionGroup>
