--- a/api-reference/api-reference.mdx
+++ b/api-reference/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'API Reference'
-description: 'Complete guide to AGD Ejar API endpoints'
+description: 'Complete guide to Agd Ejar API endpoints'
 ---
 
 ## Todo List & Implementation Status
@@ -137,5 +137,5 @@ The API uses standard HTTP response codes:
 ## Need Help?
 
 If you need assistance with the API:
-- Email: [md@agd.sa](mailto:md@agd.sa)
-- Check our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM)
+- Email: [b2b@agd.sa](mailto:b2b@agd.sa)
+- Check our [Postman Collection](https://documenter.getpostman.com/view/39514920/2sAY4yfMHr)
