--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Getting Started'
-description: 'Learn how to integrate with AGD Ejar API'
+description: 'Learn how to integrate with Agd Ejar API'
 ---
 
 ## Overview
 
-AGD Ejar API allows your application to manage properties, contracts, and interact with Saudi Arabia's Ejar platform through a simplified interface. Our API consolidates complex Ejar operations into simple, efficient calls.
+Agd Ejar API allows your application to manage properties, contracts, and interact with Saudi Arabia's Ejar platform through a simplified interface. Our API consolidates complex Ejar operations into simple, efficient calls.
 
 ## Authentication
 
@@ -110,7 +110,7 @@ func main() {
 ## Quick Start Guide
 
 1. **Get API Credentials**
-   - Contact [support](mailto:md@agd.sa) to obtain your API credentials
+   - Contact [support](mailto:b2b@agd.sa) to obtain your API credentials
    - You'll receive a `client_id` and `client_secret`
 
 2. **Authentication**
@@ -190,7 +190,7 @@ Error response format:
 ## Need Help?
 
 If you need assistance:
-- Email us at [md@agd.sa](mailto:md@agd.sa)
+- Email us at [b2b@agd.sa](mailto:b2b@agd.sa)
 - Check our [API Reference](/api-reference/introduction)
 - View our [Status Page](https://stats.uptimerobot.com/koyjLJpRaj)
-- Try our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM) 
+- Try our [Postman Collection](https://documenter.getpostman.com/view/39514920/2sAY4yfMHr) 
