--- a/changelog/introduction.mdx
+++ b/changelog/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'API Updates'
-description: 'Latest updates and improvements to AGD Ejar API'
+description: 'Latest updates and improvements to Agd Ejar API'
 ---
 
 ## March 2024
