--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,8 @@
 ---
+icon: 'code'
+iconType: 'solid'
 title: 'Development Guide'
-description: 'Set up your development environment for AGD Ejar API integration'
+description: 'Set up your development environment for Agd Ejar API integration'
 ---
 
 ## Development Setup
@@ -9,7 +11,7 @@ description: 'Set up your development environment for AGD Ejar API integration'
   **Prerequisites**: 
   - A code editor (VS Code recommended)
   - Postman for API testing
-  - AGD Ejar API credentials
+  - Agd Ejar API credentials
 </Info>
 
 ### 1. Environment Setup
@@ -92,7 +94,7 @@ def get_access_token():
 
 ### Postman Setup
 
-1. Import our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM)
+1. Import our [Postman Collection](https://documenter.getpostman.com/view/39514920/2sAY4yfMHr)
 2. Create an environment with these variables:
    - `base_url`: https://app.agdejar.sa
    - `client_id`: Your client ID
@@ -155,13 +157,13 @@ try {
   <Accordion title="Integration Problems">
     - Check our [API Reference](/api-reference/introduction)
     - Review [Common Issues](/faq/common-issues/troubleshooting)
-    - Contact [support](mailto:md@agd.sa)
+    - Contact [support](mailto:b2b@agd.sa)
   </Accordion>
 </AccordionGroup>
 
 ## Need Help?
 
 If you encounter any issues during development:
-- Email us at [md@agd.sa](mailto:md@agd.sa)
+- Email us at [b2b@agd.sa](mailto:b2b@agd.sa)
 - Check our [API Status](https://stats.uptimerobot.com/koyjLJpRaj)
 - Review our [FAQ](/faq/introduction)
