--- a/faq/introduction.mdx
+++ b/faq/introduction.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'About Agd Ejar'
-description: 'Frequently Asked Questions about AGD Ejar API'
+description: 'Frequently Asked Questions about Agd Ejar API'
 ---
 
 ## General Questions
 
-### What is AGD Ejar API?
-AGD Ejar API is a simplified interface for integrating with Saudi Arabia's Ejar platform. It consolidates complex Ejar operations into simple, efficient API calls.
+### What is Agd Ejar API?
+Agd Ejar API is a simplified interface for integrating with Saudi Arabia's Ejar platform. It consolidates complex Ejar operations into simple, efficient API calls.
 
 ### How do I get started?
-1. Contact our support team at [md@agd.sa](mailto:md@agd.sa) to obtain API credentials
+1. Contact our support team at [b2b@agd.sa](mailto:b2b@agd.sa) to obtain API credentials
 2. Review our [Getting Started guide](/api-reference/getting-started)
-3. Try our [Postman Collection](https://documenter.getpostman.com/view/34108325/2sA3kd9GpM)
+3. Try our [Postman Collection](https://documenter.getpostman.com/view/39514920/2sAY4yfMHr)
 
 ### What authentication method is used?
 We use OAuth 2.0 with Bearer tokens. See our [Authentication guide](/api-reference/auth/oauth-token) for details.
@@ -51,12 +51,12 @@ Our API can be used with any programming language that can make HTTP requests. W
 ## Support
 
 ### How do I get help?
-- Email: [md@agd.sa](mailto:md@agd.sa)
+- Email: [b2b@agd.sa](mailto:b2b@agd.sa)
 - Documentation: [API Reference](/api-reference/introduction)
 - Status: [Status Page](https://stats.uptimerobot.com/koyjLJpRaj)
 
 ### How do I report issues?
-Contact our support team at [md@agd.sa](mailto:md@agd.sa) with:
+Contact our support team at [b2b@agd.sa](mailto:b2b@agd.sa) with:
 1. Detailed description of the issue
 2. API endpoint being used
 3. Request/response examples
