--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,8 @@
 ---
-title: 'Welcome to AGD EJAR'
-description: 'Your gateway to simplified Ejar platform integration'
+icon: 'face-smile-beam'
+iconType: 'regular'
+title: 'Introduction'
+description: 'Your gateway to simplified Ejar.sa integration'
 ---
 
 <img
@@ -16,7 +18,47 @@ description: 'Your gateway to simplified Ejar platform integration'
 
 ## Getting Started
 
-Start your integration journey with our comprehensive documentation and tools.
+If you lucky, you might come across original Ejar's API documentation,you noticed:
+- You need a permession to access it from whitelisted IPs.
+- Not well written and not easy to understand.
+- You need to call multiple endpoints to get the data you need.
+- Not all endpoints are available.
+- No code examples.
+
+By using our APIs, you will facilitate your integration with Ejar.sa by:
+- A single endpoint to get all the data you need.
+- Easy to understand documentation.
+- No need to worry about whitelisted IPs.
+- Code examples in many languages (soon).
+- We will keep our API up to date with Ejar's changes.
+- You'll get extra integrations with other services out of the box.
+- You can focus on building your product and we will take care maintaining the rest.
+
+Our goal is to make it easy for you to integrate with Ejar.sa without the hassle.
+
+## Partners
+You are fully integrated with:
+- Ejar : National portal for e-contracts
+- Saudi Post (SPL) : Validating national address
+- Ministry of Justice : Validating deeds & proxies
+- Minstery of Commerce : Validating commercial registry
+- National Information center (Ministry of Interior) : Validating IDs
+
+All of thiese services are essentals to the contract registration process. By default, you'll be able to use all these services without any extra configuration.
+<img
+  className="block"
+  src="/images/003.png"
+  alt="Partners"
+/>
+
+
+This chart will give you a quick overview of how it works:
+
+<img
+  className="block"
+  src="/images/004.png"
+  alt="How it works"
+/>
 
 <CardGroup cols={2}>
   <Card
@@ -29,7 +71,7 @@ Start your integration journey with our comprehensive documentation and tools.
   <Card
     title="Try Our API"
     icon="rocket"
-    href="https://documenter.getpostman.com/view/34108325/2sA3kd9GpM"
+    href="https://documenter.getpostman.com/view/39514920/2sAY4yfMHr"
   >
     Test our endpoints using our Postman collection
   </Card>
@@ -64,7 +106,7 @@ Access key tools and information for successful integration.
   <Card
     title="Support"
     icon="headset"
-    href="mailto:md@agd.sa"
+    href="mailto:b2b@agd.sa"
   >
     Get help from our technical support team
   </Card>
