--- a/api-reference/auth/client.mdx
+++ b/api-reference/auth/client.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Client Info"
-api: "GET /tenant/v1/auth/client"
+api: "GET /b2b/v1/auth/client"
 description: "Get information about the authenticated client"
 ---
 
@@ -19,7 +19,7 @@ description: "Get information about the authenticated client"
 <RequestExample>
 ```bash
 curl --request GET \
-  --url /tenant/v1/auth/client \
+  --url /b2b/v1/auth/client \
   --header 'Accept: application/json' \
   --header 'Authorization: Bearer {access_token}'
 ```
